@@ -8,6 +8,7 @@
 - Fix: [#22962] Fuzzy horizontal-to-vertical line transitions in charts.
 - Fix: [#23009] Scenarios from RCT Classic (.sea files) are not included in the scenario index.
 - Fix: [#23015] Crash when loading a save game when the construction window is still open.
+- Fix: [#23018] Crash when loading a new game when the construction window is still open.
 - Fix: [#23023] Large scenery clearance height interpreted as negative when greater than 127.
 
 0.4.15 (2024-10-06)
